<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.detailsfact.ui.DetailsFactNumberFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_700"
            app:navigationIcon="@drawable/arrow_back_navigation"
            app:titleTextColor="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/get_fact_text"
                android:textColor="@color/white"
                android:textSize="@dimen/numbers_title_text_size"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            style="@style/TextBoldHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_text" />

        <TextView
            android:id="@+id/number_text"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="4" />

        <TextView
            style="@style/TextBoldHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small"
            android:text="@string/interesting_fact_text" />

        <TextView
            android:id="@+id/fact_text"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small"
            tools:text="4 is the number of strings on a violin, a viola, a cello, double bass, a cuatro and a ukulele,
        and the number of string pairs on a mandolin." />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>